--- a/.github/workflows/ollama-benchmark.yml
+++ b/.github/workflows/ollama-benchmark.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install runpodctl
-        run: wget -qO- cli.runpod.net | bash
+        run: wget -qO- cli.runpod.net | sudo bash
 
       - name: Configure runpodctl
         run: runpodctl config --apiKey ${{ secrets.API_KEY }} || ls ~/runners
