--- a/.github/workflows/ollama-benchmark.yml
+++ b/.github/workflows/ollama-benchmark.yml
@@ -70,7 +70,7 @@ jobs:
             --samples "${{ inputs.samples }}" \
             --languages "${{ inputs.language }}" \
             --dataset "data/${{ inputs.language }}/humanevalpack.jsonl" \
-            --provider-url "http://$ENDPOINT""
+            --provider-url "http://$ENDPOINT"
 
       - name: Archive benchmark results
         uses: actions/upload-artifact@v4
