--- a/.github/workflows/vllm-benchmark.yml
+++ b/.github/workflows/vllm-benchmark.yml
@@ -44,6 +44,9 @@ jobs:
           python-version: '3.x'
 
       - name: Install Vllm
+        run: pip install --upgrade setuptools wheel         
+
+      - name: Install Vllm
         run: pip install vllm
 
       - name: Clone vLLM repository
