--- a/.github/workflows/vllm-benchmark.yml
+++ b/.github/workflows/vllm-benchmark.yml
@@ -42,9 +42,12 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
-
+   
       - name: Clone vLLM repository
-        run: git clone https://github.com/vllm-project/vllm
+        run: |
+          git clone https://github.com/vllm-project/vllm
+         cd vllm
+         VLLM_USE_PRECOMPILED=1 pip install --editable .
 
       - name: Run benchmark
         run: |
