--- a/.github/workflows/vllm-benchmark.yml
+++ b/.github/workflows/vllm-benchmark.yml
@@ -61,7 +61,7 @@ jobs:
           python3 benchmark_serving.py --backend openai \
               --base-url "http://$ENDPOINT" \
               --dataset-name=random \
-              --model "${{ inputs.MODEL_NAME }}" \
+              --model "${{ inputs.model }}" \
               --seed 12345
 
       - name: Remove RunPod pod
