--- a/.github/workflows/vllm-benchmark.yml
+++ b/.github/workflows/vllm-benchmark.yml
@@ -66,7 +66,7 @@ jobs:
               --seed 12345
 
       - name: Install dependency
-        run: ls -l
+        run: ls -l vllm/benchmarks
         
       - name: Archive benchmark results
         uses: actions/upload-artifact@v4
