--- a/.github/workflows/vllm-benchmark.yml
+++ b/.github/workflows/vllm-benchmark.yml
@@ -65,7 +65,7 @@ jobs:
               --base-url "http://$ENDPOINT" \
               --dataset-name=random \
               --model "${{ inputs.model }}" \
-              --save-result benchmark_result.json \
+              --save-result \
               --seed 12345
 
       - name: Install Dependencies
@@ -74,11 +74,6 @@ jobs:
       - name: Install Dependencies
         run: ls vllm/benchmarks
 
-      - name: Archive Benchmark Results
-        uses: actions/upload-artifact@v4
-        with:
-          name: benchmark-results
-          path: benchmark_result.json
 
       - name: Remove RunPod Instance
         if: always()
