--- a/.github/workflows/vllm-benchmark.yml
+++ b/.github/workflows/vllm-benchmark.yml
@@ -69,6 +69,14 @@ jobs:
               --save-result \
               --seed 12345
 
+      - name: Output Benchmark Summary
+        run: |
+          echo "### Serving Benchmark Result" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+          grep -A 20 "============ Serving Benchmark Result =============" vllm/benchmarks/benchmark_result.json >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+              
+
       - name: Install Dependencies
         run: ls
 
