--- a/.github/workflows/vllm-benchmark.yml
+++ b/.github/workflows/vllm-benchmark.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Install runpodctl
         run: wget -qO- cli.runpod.net | sudo bash
 
-      - name: Wait for Pod to Be Ready
-        run: sleep 60        
+      - name: Configure runpodctl
+        run: runpodctl config --apiKey ${{ secrets.API_KEY }} || ls ~
 
       - name: Configure runpodctl
         run: runpodctl config --apiKey ${{ secrets.API_KEY }}
