--- a/.github/workflows/ollama-benchmark.yml
+++ b/.github/workflows/ollama-benchmark.yml
@@ -75,7 +75,10 @@ jobs:
       - name: Output Benchmark Results to Summary
         run: |
           echo "## Benchllama Benchmark Results" >> $GITHUB_STEP_SUMMARY
-          cat results.log >> $GITHUB_STEP_SUMMARY           
+           echo "" >> $GITHUB_STEP_SUMMARY
+           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+           cat results.log >> $GITHUB_STEP_SUMMARY
+           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY         
 
       - name: Archive Benchmark Results
         uses: actions/upload-artifact@v4
